# geosa-backend

./: .env.example  .gitignore  Makefile  README.md  start-backend.sh  start-frontend.sh
apps/api/: .slugignore  Aptfile  alembic.ini  config.yaml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/data/exports/run_623d025f-7f73-4f14-9d7b-706a42ab6240/: run_623d025f-7f73-4f14-9d7b-706a42ab6240_S102_v2.2.h5
apps/api/data/exports/run_909ebbcf-b81b-4ebb-bdf1-bcee8d417c62/: run_909ebbcf-b81b-4ebb-bdf1-bcee8d417c62_S102_v2.2.h5
apps/api/data/exports/run_bb831a82-0565-4449-ad03-58516273ae13/: run_bb831a82-0565-4449-ad03-58516273ae13_S102_v2.2.h5
apps/api/data/outputs/623d025f-7f73-4f14-9d7b-706a42ab6240/: anomalies.geojson  anomaly_heatmap.tif
apps/api/data/uploads/: 4a3ed71c-004d-43b9-875a-fec79f150085_20260209_144114_gebco_2025_n23.0_s21.0_w38.0_e40.0.tif  6fd56c06-b89a-4bd7-bdf6-4e758b659266_20260120_151536_gebco_2025_n36.85_s36.5_w-122.2_e-121.75.tif  6fd56c06-b89a-4bd7-bdf6-4e758b659266_20260121_084650_hillshade.tif  6fd56c06-b89a-4bd7-bdf6-4e758b659266_20260121_084910_esri_landcover.tif
apps/api/src/: __init__.py  main.py
apps/api/src/api/: __init__.py  dependencies.py
apps/api/src/application/: __init__.py  dtos.py  use_cases.py
apps/api/src/domain/: __init__.py  entities.py  value_objects.py
apps/api/src/infrastructure/: __init__.py  config.py  database.py  ml_pipeline.py  models.py  repositories.py  s102_export.py
apps/api/tests/: test_api.py  test_ml_pipeline.py
(+62 files in other folders)
